# 9lives.so

./: .gitattributes  .gitignore  .gitmodules  .vercelignore  CHANGELOG.md  Cargo.toml  Dockerfile.go-build  Dockerfile.go-runtime  ERRORS.md  INFRA_MARKETS.md  Makefile  README.md  ROADMAP.md  SECURITY  SECURITY.md  TODO.md  WEBSOCKET_PERFORMANCE.md  [1=2]  architecture.dot  buffer-1733215657  build-and-deploy-impls.bash  build-and-deploy-impls.sh  build-and-deploy-testnet.sh  build-and-deploy.sh  build-mainnet-arbitrum.sh  build-mainnet-superposition.sh  build-mainnet.sh  build-testnet.sh  build.rs  concept.ml  create-market.rc  create-price-market.rc  deploy-beacon-proxy-deploy-helper.sh  deploy-buy-helper2.sh  deploy-claimant-helper.sh  deploy-erc20-impl.sh  deploy-extra-beacon-factory.sh  deploy-factory-proxy.sh  deploy-factory.sh  deploy-helper-buy.sh  (+29 more)
.cargo/: config.toml  mutants.toml
.github/workflows/: check-frontend.yml  deploy-arbitrum-one-graph.yml  deploy-docs.yml  deploy-features.yml  deploy-mainnet-graph.yml  deploy-static.yml  deploy-tags.yml  deploy-testnet-graph.yml  deploy-webapp-arb.yml  deploy-webapp.yml  format.yml  lint.yml  test-solidity.yml  tests-e2e.yml  tests-unit-js.yml
agent-skills/: README.md  adding-shortterm-markets.md
audits/: README.md
blogposts/: Intro.md  math.md  outcomes.md
cmd/graphql.ethereum/: .dockerignore  .gitignore  Dockerfile  Makefile  changelog.go  changelog_test.go  docker.sh  gqlgen.yml  insert-env.sh  main.go
cmd/ingestor.ethereum/: Dockerfile  docker.sh  func.go  func_test.go  main.go
cmd/newsfeed.cron/: .gitignore  main.go
cmd/paymaster.ethereum/: .gitignore  Dockerfile  Makefile  README.md  abi.json  main.go  main_test.go  tmpl.go  tmpl_test.go  utils.go
cmd/submitter.cron/: README.md
cmd/sweeper.ethereum/: main.go
cmd/websocket.database/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  backfill_test.go  buffer_test.go  docker.sh  main.go  main_test.go  snapshot-tmpl.go  snapshot-tmpl_test.go  utils.go
db/: Dockerfile  docker.sh  init.sh  migrate.sh
db/db/: schema.sql
db/migrations/: 1726296116-init_frontpage.sql  1730430337-init_events.sql  1732386051-newsfeed.sql  1732387259-newsfeed_for_the_day.sql  1734425645-ninelives_campaigns_1_index.sql  1734962367-ninelives_events_new_trading2.sql  1735015095-extra_events.sql  1736157338-buys_and_sells_1.sql  1736667011-update_buys_and_sells_after_create.sql  1736667896-index_on_pool_address.sql  1736780912-sarp_signaller.sql  1737541181-update-campaign-for-winner.sql  1738223371-event_declared.sql  1738300931-init_banners.sql  1738841829-add-name-tsv-to-campaigns.sql  1738842100-add-shown-to-campaigns-and-buys-sells.sql  1739196685-add-total-volume-to-campaigns.sql  1739272457-add-category-index-to-campaigns.sql  1739447453-add-campaign-category-index.sql  1741074257-update-total-volume-default.sql  1741600184-update-buys-and-sells-for-winner.sql  1741646682-add_whinged.sql  1741863423-ninelives_users_1.sql  (+43 more)
docs/: book.toml
features/: features.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: amm.rs  rooti.rs
proptest-regressions/: contract_infra_market.txt  contract_lockup.txt  contract_trading_extras.txt  decimal.txt  fixed.txt  float.txt  maths.txt  timing_opt_infra_market.txt  trading_private.txt
reference/: DPM II.py  amm hypothesis.py  amm pred.py  cases.csv  reference.py
scripts/: DeployFactoryProxy.s.sol  DeployFactoryTransparentProxy.s.sol  PaymasterSig.s.sol  generate-id.go  generate_commit.rs  get-addresses-full-deploy.go  get-addresses-trading-impls.go  get-addresses.go  get-deployment-addresses.sh  get-trading-erc20-impl-addresses.go  mint-with-paymaster.sh
sol/: IEvents.sol
src/: BuyHelper.sol  BuyHelper2.sol  ClaimantHelper.sol  DeployHelper.sol  ERC20Share.sol  ExtrasBeacon.sol  ExtrasBeaconFactory.sol  ExtrasBeaconProxy.sol  FactoryProxy.sol  HelperFactory.sol  ICamelotSwapRouter.sol  IDecidable.sol  IEvents.sol  IInfraMarket.sol  ILockup.sol  ILongtail.sol  INineLives.sol  INineLivesFactory.sol  INineLivesTrading.sol  INineLivesVault.sol  IOracle.sol  IShare.sol  IStargate.sol  ITradingBeacon.sol  IWETH10.sol  InfraMarketState.sol  LPHelper.sol  LensesV1.sol  LockupToken.sol  MockInfraMarket.sol  NSToken.sol  NineLivesFactory.sol  NineLivesPaymaster.sol  NinelivesCash.sol  NinelivesLockedARB.sol  OracleStateLongtail.sol  ProxyAdmin.sol  SARPSignaller.sol  Share.sol  Shares.sol  (+129 more)
test/: TestShare.sol  end-to-end-maths.rs
tests/: 3outcomes.py  DumpStargateEstimations.sol  IArbFoundry.sol  InfraMarketHelper.sol  MockCamelotSwapRouter.sol  MockFactory.sol  MockInfraMarket.sol  MockLensesV1.sol  MockLongtail.sol  MockStargate.sol  MockTrading.sol  MockWETH10.sol  TestCreate2Trading.sol  TestERC20.sol  TestFactoryProxy.sol  TestLensesV1.sol  TestNineLivesPaymaster.sol  TestPredictionHasher.sol  TestPredictor.sol  TestShare.sol  TestTradingBeaconProxyDeployHelperFactory.sol  TestUpgradeableTwoProxy.sol  TestingProxy.sol  WhingeHelper.sol  amm-hypothesis.py  amm-pred.py  amm_pred.py  amm_pred_harness.py  database-harness.sh  db.go  db_1751030119_test.go  db_1752224436_test.go  db_1753772017_test.go  e2e-amm-python.proptest-regressions  e2e-amm-python.rs  e2e-amm.proptest-regressions  e2e-amm.rs  e2e-commit-hash.rs  e2e-contract-burn.proptest-regressions  e2e-contract-burn.rs  (+45 more)
tools/: dump-state-superposition.rc  dump-state.rc  explain-buy-router-burn-revert.sh  print-function-facets.rc
tools/stylus-interpreter/: Cargo.toml  README.md
tools/stylus-interpreter/src/: example-state-override.json  main.rs
tools/stylus-interpreter/test-contract/: Cargo.toml  Makefile  README.md
tools/stylus-interpreter/test-contract/src/: lib.rs  main.rs
web/: .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  README.md  codegen.ts  eslint.config.mjs  jest.config.cjs  jest.config.ts  jest.setup.ts  mcr.config.ts  next.config.mjs  package.json  playwright.config.ts  playwright.teardown.ts  pnpm-lock.yaml  points-schema.graphqls  prettier.config.mjs  sentry.client.config.ts  tailwind.config.ts  tsconfig.json
(+637 files in other folders)
