[package]
name = "ninelives"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "lib9lives"
edition = "2021"

[[bin]]
name = "ninelives"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
codegen-units = 1
panic = "unwind"
opt-level = "z"
incremental = false

[dependencies]
stylus-sdk = "=0.6.0"
tiny-keccak = "2.0.2"
num-traits = "0.2.19"
alloy-sol-types = "=0.7.6"
alloy-sol-macro = "=0.7.6"
alloy-core = "=0.7.6"
alloy-primitives = "=0.7.6"
array-concat = "0.5.3"
const-hex = { version = "1.12.0" }
paste = "1.0.15"
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths"] }
keccak-const = "0.2.0"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-macro-input = "=0.7.6"

[dev-dependencies]
proptest = "1.5.0"
const-hex = { version = "1.12.0", features = ["alloc"] }
rust_decimal_macros = "1.36.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy-primitives = { version = "0.7.6", features = ["getrandom"] }
proptest = "1.5.0"
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths", "proptest"] }

[features]
contract-factory-1 = []
contract-factory-2 = []
contract-trading-mint = []
contract-trading-extras = []
contract-trading-quotes = []
contract-trading-price = []
contract-lockup = []
contract-infrastructure-market = []
testing-dbg = []
testing = []
trading-backend-amm = []
trading-backend-dpm = []
