[package]
name = "ninelives"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[lib]
name = "lib9lives"
edition = "2021"

[[bin]]
name = "ninelives"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
codegen-units = 1
panic = "unwind"
opt-level = "z"
incremental = false

[dependencies]
stylus-sdk = "=0.6.0"
tiny-keccak = "2.0.2"
num-traits = { version = "0.2.19", default-features = false }
alloy-sol-types = { version = "=0.7.6", default-features = false }
alloy-sol-macro = { version = "=0.7.6", default-features = false }
alloy-core = { version = "=0.7.6", default-features = false }
alloy-primitives = { version = "=0.7.6", default-features = false }
array-concat = "0.5.3"
const-hex = { version = "1.12.0", default-features = false }
paste = "1.0.15"
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths"] }
keccak-const = "0.2.0"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-macro-input = "=0.7.6"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
proptest = "1.5.0"
const-hex = { version = "1.12.0", features = ["alloc"] }
rust_decimal_macros = "1.36.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
arrayvec = "0.7.6"
map-macro = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1.5.0"
getrandom = "0.2.15"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy-primitives = { version = "0.7.6", features = ["getrandom"] }
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths", "proptest"] }

[features]
contract-factory-1 = []
contract-factory-2 = []
contract-trading-mint = []
contract-trading-extras = []
contract-trading-quotes = []
contract-trading-price = []
contract-lockup = []
contract-infra-market = []
contract-beauty-contest = []
testing-dbg = []
testing = []
harness-stylus-interpreter = []
trading-backend-amm = []
trading-backend-dpm = []
