[package]
name = "ninelives"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "lib9lives"
edition = "2021"

[[bin]]
name = "ninelives"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
codegen-units = 16
panic = "unwind"
opt-level = "z"
incremental = true

[dependencies]
tiny-keccak = "2.0.2"
num-traits = { version = "0.2.19", default-features = false }
alloy-sol-types = { version = "=0.8.14", default-features = false }
alloy-sol-macro = { version = "=0.8.14", default-features = false }
alloy-core = { version = "=0.8.14", default-features = false }
alloy-primitives = { version = "=0.8.14", default-features = false, features = ["native-keccak"] }
array-concat = "0.5.5"
const-hex = { version = "1.12.0", default-features = false }
paste = "1.0.15"
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths"] }
keccak-const = "0.2.0"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-macro-input = "=0.7.6"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
mutants = "0.0.3"
ruint = { version = "1.14.0", default-features = false }

[dependencies.stylus-sdk]
# With the reentrant flag, Stylus SDK will be fully reentrant in our
# codebase. We don't gauge this is a issue for us, owing to the lack of
# callbacks in our code. We imagine it might be for our infra markets,
# but that's a task on the backburner, as our deployment on mainnet is a
# special version with a patch for the security issue that came up
# involving reentrancy.
version = "0.3.0"
features = ["reentrant"]

[dev-dependencies]
proptest = "1.5.0"
const-hex = { version = "1.12.0", features = ["alloc"] }
rust_decimal_macros = "1.36.0"
arrayvec = "0.7.6"
map-macro = "0.3.0"
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1.5.0"
getrandom = "0.2.15"
arbitrary = { version = "1.4.1", features = ["derive"] }
proptest-derive = "0.5.1"
alloy-primitives = { version = "=0.8.14", default-features = false, features = ["arbitrary"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy-primitives = { version = "=0.8.14", features = ["getrandom", "arbitrary"] }
rust_decimal = { version =  "1.36.0", default-features = false, features = ["maths", "proptest"] }
prettytable-rs = "0.10.0"

[features]
contract-factory-1 = []
contract-factory-2 = []
contract-trading-mint = []
contract-trading-extras = []
contract-trading-extras-admin = []
contract-trading-quotes = []
contract-trading-price = []
contract-lockup = []
contract-infra-market = []
contract-beauty-contest = []
testing-dbg = []
testing = []
harness-stylus-interpreter = []
trading-backend-amm = []
trading-backend-dpm = []
contract-infra-market-testing = []
e2e-adjust-time = []
contract-trading-dumper = []
