[package]
name = "ninelives-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4"
stylus-sdk = "=0.6.0"

[dependencies.ninelives]
path = ".."
features = ["testing"]

[[bin]]
name = "amm"
path = "fuzz_targets/amm.rs"
test = false
doc = false
bench = false
