[package]
name = "ninelives-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
stylus-sdk = "=0.6.0"
alloy-primitives = { version = "=0.7.6", default-features = false, features = ["arbitrary"] }

[dependencies.ninelives]
path = ".."
features = ["testing"]

[[bin]]
name = "amm"
path = "fuzz_targets/amm.rs"
test = false
doc = false
bench = false
