[package]
name = "stylus-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-network-primitives = "^0.6"
alloy-primitives = { version = "=0.8.11", features = ["map"] }
alloy-provider = { version = "=0.6.4", features = ["debug-api"] }
alloy-rpc-types-trace = "^0.6"
alloy-eips = "^0.6"
alloy-transport-http = "=0.6.4"
alloy-network = "^0.6"
const-hex = "1.13.1"
futures = "0.3.31"
getrandom = "0.2.15"
keccak-const = "0.2.0"
maplit = "1.0.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
tiny-keccak = { version = "2.0.0", features = ["sha3"] }
tokio = { version = "1.43.1", features = ["full"] }
url = "2.5.3"
wasmtime = { version = "25.0.1", features = ["runtime", "cranelift"] }
alloy-rpc-types-eth = "^0.6"
alloy-json-rpc = "^0.6"
clap = { version = "4.5.23", features = ["derive"] }
