[package]
name = "test-contract"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[build]
target = "wasm32-unknown-unknown"

[lib]
name = "libtestcontract"
edition = "2021"

[[bin]]
name = "test-contract"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[dependencies]
stylus-sdk = "=0.6.0"
const-hex = { version = "1.12.0", default-features = false }
